Lots of gameplay loop updates